--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </div>
     </div>
 </div>
-<div id="alternativeContent" class="displayOff">
+<div id="alternativeContent">
     <p>I'm sorry, but this game is not yet available to be played in a mobile device or tablet.</p>
     <img src="images/brokenHeart.jpg" alt="Broken Heart Image">
 </div>
