corrected the non-responsive text

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </div>
 </div>
 <div id="alternativeContent">
-    <p>I'm sorry, but this game is not yet available to be played in a mobile device or tablet.</p>
+    <p>I'm sorry, but this game is not yet available to be played on a screen of this size. Please try re-opening it on a bigger screen.</p>
     <img src="images/brokenHeart.jpg" alt="Broken Heart Image">
 </div>
 
